--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <img src="img/fedex.png" class="card-img-top img-fluid">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-text">FedEx & AI</h3>
+                            <h3 class="card-text">FedEx & AI (WIP)</h3>
                             <p class="card-text">Artificial Intelligence gebruiken om pakketbezorging bij FedEx te verbeteren</p>
                         </div>
                     </a>
