--- a/aquaclick.html
+++ b/aquaclick.html
@@ -20,6 +20,24 @@
     </section>
 
     <div class="album py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 darker">
+                    <h4>TypeScript</h4>
+                    <p>
+                        Dit is een game die ik gemaakt heb in TypeScript.<br>
+                        In dit project heb ik met verschillende OOP principes gewerkt.<br>
+                        Dit waren de principes Encapsulation, Composition en Inheritance.
+                    </p>
+                    <a href="https://arnojong.github.io/aquaclick/">
+                        <img class="image" src="img/aqua.jpg">
+                    </a>
+                    <h6>
+                        Klik op de afbeelding om het spel te spelen
+                    </h6>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
