--- a/fedex.html
+++ b/fedex.html
@@ -20,6 +20,26 @@
     </section>
 
     <div class="album py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 darker">
+                    <h4>React, Redux</h4>
+                    <p>
+                        Mijn huidige project is voor de opdrachtgever FedEx.<br>
+                        De uitdaging is om met behulp van AI de pakketbezorging van FedEx te verbeteren.<br>
+                        Ik ben in dit project verantwoordelijk voor de front-end en ik doe dit met React en Redux.
+                    </p>
+                    <img class="image" src="img/fed1.png">
+                    <h6>
+                        Ik ben tot nu toe vooral bezig met geweest met actions, reducers, sagas, etc. Daarom is er nog niet veel front-end te zien.
+                    </h6>
+                    <img class="image" src="img/fed2.png">
+                    <h6>
+                        Aan de slag met Design Sprints
+                    </h6>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
