--- a/feyeboard.html
+++ b/feyeboard.html
@@ -20,6 +20,22 @@
     </section>
 
     <div class="album py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 darker">
+                    <h4>HTML, CSS, PHP, JS</h4>
+                    <p>
+                        Ik kreeg met mijn team de opdracht om een oplossing te vinden voor het saaie plein bij Feyenoord.<br>
+                        We hebben toen een interactief bord gemaakt waar je de uitslag kan voorspellen, mee kan zingen met Feyenoord muziek, en video's kan kijken.<br>
+                        Mijn bijdrage aan dit project was voornamelijk de API's laten werken, en vervolgens de losse onderdelen netjes samen te voegen op het grote scherm.
+                    </p>
+                    <img class="image" src="img/fey.jpg">
+                    <h6>
+                        Complete setup met achterin de schermen waar ik aan gewerkt heb
+                    </h6>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
