--- a/index.html
+++ b/index.html
@@ -15,16 +15,21 @@
 
     <section class="jumbotron-main">
         <div class="container">
-            <h1 class="display-3">Over mij</h1>
-            <p class="lead">Blabla saaie tekst over mij</p>
-            <p class="lead">Hieronder staan projecten waar ik aan gewerkt heb</p>
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="display-3">Arno de Jong</h1>
+                    <p class="lead">Ik ben een tweedejaars student aan de Hogeschool Rotterdam bij de opleiding Creative Media and Game Technologies</p>
+                    <p class="lead">Voor de eerste helft van mijn derde leerjaar (vanaf september 2018) ben ik op zoek naar een stage als front-end developer</p>
+                    <p class="lead">Hieronder staan projecten waar ik aan gewerkt heb</p>
+                </div>
+            </div>
         </div>
     </section>
 
 <div class="album py-5 bg-light">
     <div class="container">
         <div class="row">
-            <div class="col-md">
+            <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
                     <a href="reserveringssysteem.html" class="">
                         <div class="card-top">
@@ -37,7 +42,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md">
+            <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
                     <a href="feyeboard.html" class="">
                         <div class="card-top">
@@ -50,7 +55,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md">
+            <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
                     <a href="aquaclick.html" class="">
                         <div class="card-top">
@@ -65,7 +70,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md">
+            <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
                     <a href="f1.html" class="">
                         <div class="card-top">
@@ -78,7 +83,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md">
+            <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
                     <a href="social.html" class="">
                         <div class="card-top">
@@ -91,7 +96,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md">
+            <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
                     <a href="fedex.html" class="">
                         <div class="card-top">
