--- a/reserveringssysteem.html
+++ b/reserveringssysteem.html
@@ -15,11 +15,35 @@
 
     <section class="jumbotron-res">
         <div class="container">
-            <h1 class="display-3">Reserveringssysteem</h1>
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-lg-12">
+                    <h1 class="display-3">Reserveringssysteem</h1>
+                </div>
+            </div>
         </div>
     </section>
 
     <div class="album py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 darker">
+                    <h4>HTML, CSS, PHP, MySQL</h4>
+                    <p>
+                        Voor Auto Indumij, een Renault Dealer in Dordrecht, heb ik een reserveringssysteem gemaakt.<br>
+                        Klanten kunnen hier via een formulier een proefrit aanvragen. De aanvraag wordt vervolgens in de achterliggende database opgeslagen.<br>
+                        Medewerkers van Auto Indumij kunnen inloggen en in een tabel een overzicht zien van de proefritten die aangevraagd zijn.
+                    </p>
+                    <img class="image" src="img/res1.png">
+                    <h6>
+                        Het formulier om een proefrit aan te vragen
+                    </h6>
+                    <img class="image" src="img/res2.png">
+                    <h6>
+                        De omgeving van de medewerker
+                    </h6>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
