--- a/social.html
+++ b/social.html
@@ -20,6 +20,26 @@
     </section>
 
     <div class="album py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 darker">
+                    <h4>Arduino, Python, MySQL</h4>
+                    <p>
+                        De uitdaging was om een device te maken in het kader van 'Human Enhancement', het device moet vast zitten aan de gebruiker.<br>
+                        Wij hebben toen voor een handschoen gekozen die punten telt wanneer je de hand vasthoudt van anderen met zo'n zelfde handschoen.<br>
+                        De punten sporen mensen vervolgens aan om erop uit te gaan en punten te verzamelen door de hand vast te houden van vreemden.
+                    </p>
+                    <img class="image" src="img/soc1.png">
+                    <h6>
+                        De handschoen is uitgerust met een RFID-tag en een RFID lezer zodat handschoenen elkaar kunnen herkennen
+                    </h6>
+                    <img class="image" src="img/soc2.png">
+                    <h6>
+                        De punten worden via de USB kabel doorgestuurd naar de seriële monitor, deze worden uitgelezen door Python en doorgestuurd naar de database
+                    </h6>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
