--- a/f1.html
+++ b/f1.html
@@ -20,6 +20,29 @@
     </section>
 
     <div class="album py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 darker">
+                    <h4>Android</h4>
+                    <p>
+                        In deze Formule 1 App is een overzicht te zien van alle coureurs uit 2018.<br>
+                        Deze coureurs en bijbehorende informatie worden via een API opgehaald.<br>
+                        Via de instellingen is te bepalen welke informatie weergegeven moet worden.
+                    </p>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img class="image" src="img/f11.jpg">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="image" src="img/f12.jpg">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="image" src="img/f13.jpg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
